k8s/service.yaml
# ============================================================
# ☸️ KUBERNETES SERVICE - SPRING APP
# ============================================================

apiVersion: v1
kind: Service
metadata:
  name: spring-service
  namespace: devops-tools
  labels:
    app: spring-app
spec:
  selector:
    app: spring-app
  type: NodePort
  ports:
    - port: 8089
      targetPort: 8089
      nodePort: 30080
      name: http
